feat: 同步 Fabric 1.18.2 完整功能基线